--- a/css/calculator.css
+++ b/css/calculator.css
@@ -93,14 +93,15 @@ html {
 	line-height: 36px;
 	text-align: center;
 	
+	/* Smoothing out hover and active states using css3 transitions */
+    transition: top 0.2s ease, box-shadow 0.2s ease;
+	
 	/* prevent selection of text inside keys */
 	-moz-user-select: none;
 	-webkit-user-select: none;
 	user-select: none;
+    
 }
-
-/* Smoothing out hover and active states using css3 transitions */
-/*	transition: top 0.2s ease, box-shadow 0.2s ease; */
 
 /* Remove right margins from operator keys */
 /* style different type of keys (operators/evaluate/clear) differently */
@@ -141,24 +142,30 @@ html {
 	color: white;
 }
 
+
 /* Simulating "pressed" effect on active state of the keys by removing the box-shadow and moving the keys down a bit */
 
-/*
 .keys span:active {
+	background: #9c89f6;
+	color: white;
 	top: 4px;
 	box-shadow: 0px 0px #6b54d3;
 }
 
 .keys span.eval:active {
+	background: #abb850;
+	color: #ffffff;
 	top: 4px;
 	box-shadow: 0px 0px #717a33;
 }
 
 .top span.clear:active {
+	background: #f68991;
+	color: white;
 	top: 4px;
 	box-shadow: 0px 0px #d3545d;
 }
-*/
+
 
 
 
