--- a/css/calculator.css
+++ b/css/calculator.css
@@ -95,16 +95,18 @@ html {
 	line-height: 36px;
 	text-align: center;
 	
-	/* Smoothing out hover and active states using css3 transitions */
-	-webkit-transition: top 0.2s ease, box-shadow 0.2s ease;
-    transition: top 0.2s ease, box-shadow 0.2s ease;
-	
 	/* prevent selection of text inside keys */
 	-moz-user-select: none;
 	-webkit-user-select: none;
 	user-select: none;
     
 }
+
+/* Smoothing out hover and active states using css3 transitions */
+    /*
+    -webkit-transition: top 0.2s ease, box-shadow 0.2s ease;
+    transition: top 0.2s ease, box-shadow 0.2s ease;
+    */
 
 /* Remove right margins from operator keys */
 /* style different type of keys (operators/evaluate/clear) differently */
@@ -148,6 +150,7 @@ html {
 
 /* Simulating "pressed" effect on active state of the keys by removing the box-shadow and moving the keys down a bit */
 
+/*
 .keys span:active {
 	background: #9c89f6;
 	color: white;
@@ -168,7 +171,7 @@ html {
 	top: 4px;
 	box-shadow: 0px 0px #d3545d;
 }
-
+*/
 
 
 
