--- a/css/calculator.css
+++ b/css/calculator.css
@@ -36,7 +36,7 @@ html {
 	height: auto;
 	
 	margin: 0px;
-	padding: 0px;
+	padding: 20px 20px 10px;
 	
 	background: #9dd2ea;
     background: linear-gradient(#9dd2ea, #8bceec);
